recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:3: error: not found: value length
    val y:Int=length(list)
              ^nlast:7: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head
             ^